c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/extra_credit/struct_union.c
// Can't use struct and union keywords in same declaration
union struct s {
    int a;
};

int main(void) {
    return 0;
}